tests/errors/cases/basic.t

void main() {
    bool a = 123;
}